--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Jason:
 Lauren: hellohello -- direct edit
 Amar:
 
-jason broke this.
+jason fixed it.
 
 #How to create a new repository
 touch README.md
